--- a/volunteer.html
+++ b/volunteer.html
@@ -9,19 +9,19 @@
     <h1 style="width: 400px;font-size: 40px;font-family: 'Arial', sans-serif;font-weight: bold;color: rgb(39, 72, 72);">Become Volunteer</h1>
     <div style="display: grid; place-items: center;">
         <div style="border: 1px solid pink;width: 300px;height: 200px; background-color: bisque;">
-        <h3>Register</h3>
-        <label>user Name</label>
-        <input placeholder="password" type="text">
+        <h3 style="text-align: center; color: rgb(82, 148, 148);">Login</h3>
+        <label style="color: rgb(41, 48, 54);">user Name</label>
+        <input placeholder="username" type="text" style="">
         <br>
         <br>
 
-        <label>password </label>
+        <label style="color: rgb(41, 48, 54);">password </label>
 
-        <input placeholder="password" type="password">
+        <input placeholder="password" type="password" style="">
         <br>
         <br>
 
-        <button style="margin-left: 40%;">Sign in</button>
+        <button style="height: 30px; margin-left: 40%;border-radius: 10px; background-color: rgb(63, 141, 174); color: wheat;border: none;">Sign in</button>
     </div>
     </div>
 </body>
