--- a/volunteer.html
+++ b/volunteer.html
@@ -11,13 +11,13 @@
         <div style="border: 1px solid pink;width: 300px;height: 200px; background-color: bisque;">
         <h3 style="text-align: center; color: rgb(82, 148, 148);">Login</h3>
         <label style="color: rgb(41, 48, 54);">user Name</label>
-        <input placeholder="username" type="text" style="">
+        <input placeholder="username" type="text" style="height: 30px;border-radius: 20px;border: none;">
         <br>
         <br>
 
         <label style="color: rgb(41, 48, 54);">password </label>
 
-        <input placeholder="password" type="password" style="">
+        <input placeholder="password" type="password" style="height: 30px;border-radius: 20px;border: none;">
         <br>
         <br>
 
