--- a/online_store.html
+++ b/online_store.html
@@ -9,10 +9,11 @@
     <div id="header" style="background-color: black; height: 70px; display: grid; grid-template-columns: repeat(auto-fit,minmax(300px,1fr));">
      <h1 style="color: white;">My Online store</h1>
      <input type="text" style="width: 50%;height: 30px;margin-top: 20px; border-radius: 10px;border:1px solid black;font-size: 15px;" id="loan-amount" placeholder="search products">
+    
     </div>
     <div id="body">
         <!-- category 1 -->
-        <h1>Men's clothing</h1>
+        <h1 style="margin-top: 100px;">Men's clothing</h1>
        <div style="display: grid; grid-template-columns: repeat(auto-fit,minmax(300px,1fr));">
         <div style="border: 1 solid blue; border-radius: 50%; ">
         <img src="https://rukminim2.flixcart.com/image/612/612/xif0q/shirt/r/g/a/s-rama-shirts-floura-original-imagggbb2ampyya3.jpeg?q=70" width="100%" alt="">
