--- a/blog.html
+++ b/blog.html
@@ -34,36 +34,36 @@
      <p style="color: white;">For $699 and $24 a month, this wearable computer promises to free you from your smartphone. There’s only one problem: it just doesn’t work.</p>
     </div>
     <div id="lists">
-     <h1 style="color: white;">Top story</h1>
+     <h1 style="color: rgb(21, 79, 104);">Top story</h1>
      <!-- story 1 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white;">
+    <h2 style="color: white; max-width: 50%;">
         Three-quarters of the image are filled with the frame and three-bladed ducted propellors of a quadcopter drone with a slim gray body and a camera at one end.
         Official: here’s the DJI Avata 2, possibly one of the best sequels in years</h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:2040x1360/128x102/filters:focal(1020x680:1021x681):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25384974/vpavic_20240407_Untitled_Job_11433.jpg">
     </div>
      <!-- story 2 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(50px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white;">
+    <h2 style="color: white; max-width: 50%;">
         A light grey VanMoof S5 e-bikes sits on a brick sidewalk in Amsterdam between two long rows of bicycles.
         Testing VanMoof’s refreshed e-bikes, which are again available to buy</h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:5712x4284/128x102/filters:focal(2979x2029:2980x2030):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25383717/IMG_3781.jpeg">
     </div>
      <!-- story 3 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(50px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white;">
+    <h2 style="color: white; max-width: 50%;">
         Yale’s inexpensive new retrofit lock will work with Matter-over-Thread
     </h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:5760x3840/128x102/filters:focal(2880x1920:2881x1921):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25384936/Yale_Approach_with_Keypad_Hero.jpg">
     </div>
      <!-- story 4 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(50px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white;">Amazon’s Fallout show gets the postapocalyptic vibes exactly right</h2>
+    <h2 style="max-width: 50%;color: white;">Amazon’s Fallout show gets the postapocalyptic vibes exactly right</h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:2999x1242/128x102/filters:focal(1066x490:1067x491):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25126271/FALLOUT_S1_480_vX002.00086464_3000.jpg">
     </div>
      <!-- story 5 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(50px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white;">
+    <h2 style="color: white;max-width: 50%;">
         A graphic illustration of the Sonos logo.
         This is the new Sonos app, coming May 7th</h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:2040x1360/128x102/filters:focal(1020x680:1021x681):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/24207013/STK084_Sonos_02.jpg">
