--- a/movie.html
+++ b/movie.html
@@ -7,6 +7,7 @@
 </head>
 <body style="background-color: black; ">
     <h1 style="color: white; font-size: 70px;">Movie site</h1>
+    <button style="height: 30px;border-radius: 10px; background-color: rgb(63, 141, 174); color: wheat;border: none;"><a href="./index.html">Back</a></button>
     <h2 style="color: white;">New</h2>
     <div id="recent-movies" style="display: grid; grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); grid-gap: 20px; margin-bottom: 50px;">
       <img src="https://assets.gadgets360cdn.com/pricee/assets/product/202304/Godzilla-x-kong_1682078127.jpg?downsize=220:308">
