--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
      <h1 style="color: rgb(21, 79, 104);">Top story</h1>
      <!-- story 1 -->
      <div style="display: grid;grid-template-columns: repeat(auto-fit,minmax(50px,1fr)); grid-gap: 20px;">
-    <h2 style="color: white; max-width: 50%; min-width: 200px">
+    <h2 style="color: white; max-width: 50%;">
         Three-quarters of the image are filled with the frame and three-bladed ducted propellors of a quadcopter drone with a slim gray body and a camera at one end.
         Official: here’s the DJI Avata 2, possibly one of the best sequels in years</h2>
     <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:2040x1360/128x102/filters:focal(1020x680:1021x681):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25384974/vpavic_20240407_Untitled_Job_11433.jpg">
