--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <h2><a style="color: antiquewhite; font-size: 50px; font-family: 'Whisper', cursive; font-weight: 400;" href="./online_store.html">online store</a></h2>
       <h2><a style="color: antiquewhite; font-size: 50px; font-family: 'Whisper', cursive; font-weight: 400;" href="./blog.html">blog site</a></h2>
       <h2><a style="color: antiquewhite; font-size: 50px; font-family: 'Whisper', cursive; font-weight: 400;" href="./volunteer.html">volunteer's site</a></h2>
+      <h2><a style="color: antiquewhite; font-size: 50px; font-family: 'Whisper', cursive; font-weight: 400;" href="./collapsable-header.html">collapsable-header</a></h2>
     </div>
 
 </body>
