--- a/collapsable-header.html
+++ b/collapsable-header.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
+    <script src="./assets/js/index.js"></script>
 </head>
 <body>
     
         <div id="collapsable_header">
-          <div id="logo">logo
+          <div id="left_bar" style="width: 0px; visibility:hidden;">
+            <div>
+              <img src="./assets/img/360_logo.png">
+            </div>
+            <div>
+              <Button>A</Button>
+            </div>
+            <div>
+              <button>B</button>
+            </div>
+            <div>
+              <button>C</button>
+            </div>
+            <div>
+              <button>D</button>
+            </div>
+          </div>
+          <div id="logo">
+             <img src="./assets/img/360_logo.png">
           </div>
         <div id="right_header">
           <div>
